# aptui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.aptui/requests/: request-67z95.json
aptui/: aptui_styles.css  main.py
aptui/widgets/: request_container.py  request_headers.py  request_methods.py  response.py
src/: aptui_styles.css  main.py
src/components/: inputs.py  methods.py  response.py
