[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "APTUI"
description = "Test APIs right from your terminal with a TUI"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["api", "aptui"]
classifiers = [
    "Framework :: Textual",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "textual",
    "pyperclip",
    "uncurl",
    "requests-to-curl",
]
#dynamic = ["version"]
version = "0.1.0"

[project.scripts]
aptui = "aptui.main:main"
